--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,4 +19,8 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
+  aws_region: <%= ENV["AWS_REGION"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  aws_bucket_name: <%= ENV["AWS_BUCKET_NAME"] %>
+  aws_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  aws_secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
