--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ bundler_args: --without development --deployment --jobs=3 --retry=3
 cache: bundler
 rvm:
   - 2.2.2
+addons:
+  postgresql: '9.3'
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - cp config/database.yml.travis config/database.yml
+  - bundle exec rake db:create db:migrate
