Adds iugu_auth_code to authenticate iugu webhooks

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -26,6 +26,7 @@ production: &production
   aws_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
   aws_secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
   iugu_api_key: <%= ENV["IUGU_API_KEY"] %>
+  iugu_auth_code: <%= ENV["IUGU_AUTH_CODE"] %>
 
 staging:
   <<: *production
