Adds asset_sync gem to Gemfile
This gem allows the assets to be served from S3 instead of Heroku application

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -29,6 +29,8 @@ production: &production
   iugu_api_key: <%= ENV["IUGU_API_KEY"] %>
   iugu_auth_code: <%= ENV["IUGU_AUTH_CODE"] %>
   iugu_account_id: <%= ENV["IUGU_ACCOUNT_ID"] %>
+  asset_sync_gzip_compression: <%= ENV["ASSET_SYNC_GZIP_COMPRESSION"] %>
+  asset_sync_manifest: <%= ENV["ASSET_SYNC_MANIFEST"] %>
 
 staging:
   <<: *production
