Add inherited ENVs in app.json

--- a/app.json
+++ b/app.json
@@ -34,6 +34,12 @@
     "IUGU_AUTH_CODE": {
       "required": true
     },
+    "RACK_ENV": {
+      "required": true
+    },
+    "RAILS_ENV": {
+      "required": true
+    },
     "SECRET_KEY_BASE": {
       "description": "A secret key for verifying the integrity of signed cookies.",
       "generator": "secret"
