--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: ruby
-bundler_args: --without development --deployment --jobs=3 --retry=3
+bundler_args: "--without development --deployment --jobs=3 --retry=3"
 cache: bundler
 rvm:
-  - 2.2.3
+- 2.2.3
 addons:
   postgresql: '9.3'
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-  - cp config/database.yml.travis config/database.yml
-  - bundle exec rake db:create db:migrate
+- psql -c 'create database travis_ci_test;' -U postgres
+- cp config/database.yml.travis config/database.yml
+- bundle exec rake db:create db:migrate
